--- a/public/css/style.css
+++ b/public/css/style.css
@@ -215,6 +215,7 @@ img{
     padding: 0px 18px;
     text-transform: uppercase;
     font-weight: normal;
+    font-size: 16px;
 }
 .nav > li:hover .parent_menu{
     color: #ffaa00;
