--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,8 +201,8 @@ img{
     float:left;
     font-size: 18px;
     font-weight: normal;
-    height: 50px;
-    line-height:50px;
+   /* height: 50px;
+    line-height:50px;*/
 }
 .nav li:first-child{
     border-left:none;
