--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1577,6 +1577,7 @@ a.close:hover {
     width:48%;
     box-shadow: 0px 0px 4px #666;
     margin-left: 2%;
+    font-size: 9pt;
 }
 .addcart-btn:hover{
     
